--- a/style.css
+++ b/style.css
@@ -84,11 +84,13 @@ font-family: 'Source Code Pro', monospace;*/
 
 .img1 {
 	width: 100%;
+	max-width: 150px;
 	margin: 39px 0 0 0;
 }
 
 .img2 {
 	width: 100%;
+	max-width: 150px;
 	margin: 30px 0 0 0;
 }
 
