--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ font-family: 'Source Code Pro', monospace;*/
 	text-decoration: none;
 }
 
+a { 
+	color: inherit; 
+	text-decoration: none} 
+
 .listitem {
 	font-family: "Inconsolata", monospace;
 	font-size: 10.7px;
@@ -84,13 +88,23 @@ font-family: 'Source Code Pro', monospace;*/
 
 .img1 {
 	width: 100%;
-	max-width: 150px;
+	max-width: 800px;
 	margin: 39px 0 0 0;
 }
 
 .img2 {
 	width: 100%;
-	max-width: 150px;
+	max-width: 800px;
+	margin: 30px 0 0 0;
+}
+
+.img1_hr {
+	width: 120%;
+	margin: 39px 0 0 0;
+}
+
+.img2_hr {
+	width: 120%;
 	margin: 30px 0 0 0;
 }
 
@@ -127,6 +141,16 @@ button:focus {
 		color: #f7f7f7;
 	}
 
+.img1_hr {
+	max-width: 100%;
+	margin: 11px 0 0 0;
+}
+
+.img2_hr {
+	max-width: 100%;
+	margin: 1px 0 0 0;
+}
+
 }
 
 @media only screen and (max-width: 420px) {
@@ -140,10 +164,22 @@ button:focus {
 }
 
 .img1 {
+	max-width: 100%;
 	margin: 11px 0 0 0;
 }
 
 .img2 {
+	max-width: 100%;
+	margin: 1px 0 0 0;
+}
+
+.img1_hr {
+	max-width: 100%;
+	margin: 11px 0 0 0;
+}
+
+.img2_hr {
+	max-width: 100%;
 	margin: 1px 0 0 0;
 }
 
